[package]
name = "blogger"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
chrono = "0.4.43"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.28.0", features = ["full"] }
uuid = { version = "1.10", features = ["v4"] }
dotenvy = "0.15.7"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = {version = "0.3.22", features = ["fmt", "env-filter"]}
